# VI-DSO

./: CMakeLists.txt  run_euroc.bash  run_mono.bash
cmake/: FindBoost.cmake  FindBoostInternal.cmake  FindGlog.cmake  FindGlogInternal.cmake  FindLibZip.cmake  FindLibZipInternal.cmake  FindOpenCV.cmake  FindOpenCVInternal.cmake  FindPangolin.cmake  FindPangolinInternal.cmake  FindSuiteParse.cmake  FindSuiteParseInternal.cmake  SetPlatformVarsInternal.cmake
src/: main_dso_pangolin.cpp  main_test.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  IMUPreintegrator.cpp  IMUPreintegrator.h  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector.h  PixelSelector2.cpp  PixelSelector2.h  ResidualProjections.h  Residuals.cpp  Residuals.h
src/IOWrapper/: ImageDisplay.h  ImageDisplay_dummy.cpp  ImageRW.h  ImageRW_dummy.cpp  Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h  RawResidualJacobian.h
src/main/: main_dso.cpp  main_test.cpp
src/util/: DatasetReader.h  FrameShell.h  ImageAndExposure.h  IndexThreadReduce.h  IndexThreadReduceNB.h  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  nanoflann.h  settings.cpp  settings.h  systemInput.cpp  systemInput.h  threading.cpp  threading.h
